--- a/frontend/src/ui/assets/css/domain/event.css
+++ b/frontend/src/ui/assets/css/domain/event.css
@@ -1,6 +1,6 @@
 .bg-striped {
-    --color-1: rgb(255 255 255 / 0.6);
-    --color-2: rgb(255 255 255 / 0.2);
+    --color-1: rgb(0 0 0 / 0.03);
+    --color-2: rgb(255 255 255 / 0.03);
     --pattern: linear-gradient(
         135deg,
         var(--color-1) 25%,
@@ -16,24 +16,19 @@
 }
 
 .event-card {
-    @apply overflow-hidden rounded-xl border border-blue-200 hover:shadow-lg;
+    @apply overflow-hidden rounded-xl hover:shadow;
     @apply cursor-pointer;
     @apply text-sm font-semibold;
+    @apply bg-surface-container-high bg-opacity-50 hover:bg-opacity-75;
 }
 
 .event-card .border-event-card {
-    @apply border-blue-200;
+    @apply border-surface-container-high;
 }
 
 .event-card > * {
-    @apply h-full w-full py-1 pl-2 pr-4 text-white sm:px-2;
-    @apply border-l-8 border-blue-400;
-    @apply bg-blue-100 bg-opacity-75 hover:bg-opacity-100;
-    @apply text-blue-900;
-}
-
-.event-card h3 {
-    @apply text-blue-900;
+    @apply h-full w-full py-1 pl-2 pr-4 sm:px-2;
+    @apply border-l-[0.5rem] border-surface-container-high;
 }
 
 .event-card.loading {
@@ -42,23 +37,27 @@
 }
 
 .event-card.loading > * {
-    @apply bg-primary-100 bg-opacity-75;
 }
 
 .event-card.assigned {
-    @apply border border-green-200;
-}
-
-.event-card.assigned > * {
-    @apply border-l-8 border-green-700;
-    @apply bg-green-100 bg-opacity-75 hover:bg-opacity-100;
-    @apply text-green-900;
-}
-
-.event-card.assigned h3 {
-    @apply text-green-900;
+    @apply bg-primary-container bg-opacity-50 text-onprimary-container hover:bg-opacity-75;
 }
 
 .event-card.assigned .border-event-card {
-    @apply border-green-200;
+    @apply border-onprimary-container border-opacity-20;
+}
+
+.event-card.waiting-list {
+    /*@apply bg-secondary-container text-onsecondary-container bg-opacity-25;*/
+}
+
+.event-card.assigned > * {
+    @apply border-l-[0.5rem] border-onprimary-container border-opacity-20;
+}
+
+.event-card.assigned h3 {
+    /*@apply text-primary;*/
+}
+
+.event-card.assigned .border-event-card {
 }
