--- a/frontend/src/ui/assets/css/styling/table.css
+++ b/frontend/src/ui/assets/css/styling/table.css
@@ -66,7 +66,7 @@ table.v-table {
 .sticky-table-header .v-table th:before {
     content: '';
     @apply absolute bottom-0 left-0 right-0 top-0;
-    @apply border-b border-primary-100;
+    @apply border-b border-primary-container;
 }
 
 .v-table th:first-child,
@@ -152,12 +152,4 @@ table.v-table {
 .with-multi-selection .v-table,
 .interactive-table .v-table {
     @apply select-none;
-}
-
-.v-table .table-action-button {
-    @apply mr-4 h-10 w-10 cursor-pointer rounded-full hover:bg-surface-container-highest;
-}
-
-.v-table tbody tr:not(.no-data).selected .table-action-button {
-    @apply text-onprimary-variant hover:bg-primary-variant;
 }
