fix permission system for role event planner

--- a/frontend/src/ui/assets/css/domain/permission.css
+++ b/frontend/src/ui/assets/css/domain/permission.css
@@ -1,5 +1,9 @@
 body:not(.events\:read) .permission-read-events,
 body:not(.events\:write) .permission-write-events,
+body:not(.events\:create) .permission-create-events,
+body:not(.events\:delete) .permission-delete-events,
+body:not(.events\:write-details) .permission-write-event-details,
+body:not(.events\:write-slots) .permission-write-event-slots,
 body:not(.users\:read) .permission-read-users,
 body:not(.users\:read-details-self) .permission-read-own-user-details,
 body:not(.users\:write-self) .permission-write-own-user-details,
@@ -10,8 +14,8 @@ body:not(.positions\:read) .permission-read-positions,
 body:not(.positions\:write) .permission-write-positions,
 body:not(.qualifications\:read) .permission-read-qualifications,
 body:not(.qualifications\:write) .permission-write-qualifications,
-body:not(.event-team\:write-self) .permission-write-own-registrations,
-body:not(.event-team\:write) .permission-write-registrations,
+body:not(.registrations\:write) .permission-write-registrations,
+body:not(.registrations\:write-self) .permission-write-own-registrations,
 body:not(.beta-features) .permission-beta-features,
 body:not(.application-settings\:write) .permission-write-application-settings {
     display: none !important;
