--- a/frontend/src/ui/assets/css/domain/role.css
+++ b/frontend/src/ui/assets/css/domain/role.css
@@ -1,3 +1,3 @@
 .position {
-    @apply whitespace-nowrap rounded-lg bg-opacity-75 px-2 py-1 font-bold text-white;
+    @apply whitespace-nowrap rounded-lg bg-opacity-75 px-2 py-1 font-black text-onsurface-variant;
 }
