implement batch ics download

--- a/frontend/src/ui/assets/css/styling/buttons.css
+++ b/frontend/src/ui/assets/css/styling/buttons.css
@@ -85,6 +85,10 @@ a.btn-danger,
     @apply bg-secondary-container text-onsecondary-container;
 }
 
+.btn-ghost:disabled {
+    @apply opacity-50;
+}
+
 .btn-ghost-danger {
     @apply text-error;
 }
