implement sheets as dialog alternative

--- a/frontend/src/ui/assets/css/main.css
+++ b/frontend/src/ui/assets/css/main.css
@@ -3,6 +3,7 @@
 @import 'lib/dropdown.css';
 @import 'lib/collapsible-pane.css';
 
+@import 'styling/animations.css';
 @import 'styling/inputs.css';
 @import 'styling/typography.css';
 @import 'styling/buttons.css';
