--- a/frontend/src/ui/assets/css/main.css
+++ b/frontend/src/ui/assets/css/main.css
@@ -3,12 +3,12 @@
 @import 'lib/dropdown.css';
 @import 'lib/collapsible-pane.css';
 
+@import 'styling/animations.css';
 @import 'styling/inputs.css';
 @import 'styling/typography.css';
 @import 'styling/buttons.css';
 @import 'styling/table.css';
 @import 'styling/pagination.css';
-@import 'styling/dialog.css';
 @import 'styling/scrollbar.css';
 @import 'styling/status-panels.css';
 
@@ -31,6 +31,18 @@ body {
 
 .h-nav {
     height: var(--nav-height);
+}
+
+.h-screen {
+    height: var(--viewport-height);
+}
+
+.min-h-screen {
+    min-height: var(--viewport-height);
+}
+
+.max-h-screen {
+    max-height: var(--viewport-height);
 }
 
 .pt-nav {
